--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-readme
+# Mood Recognition using Voice
+
+This is the code on how to train the machine learning model to detect mood form voice dataset.
